[gd_scene load_steps=3 format=3 uid="uid://b7ughriv7m5vm"]

[ext_resource type="Script" uid="uid://cv0kc0uvip3a0" path="res://debug/debug_slider/debug_slider.gd" id="1_wumhd"]
[ext_resource type="Script" uid="uid://bkd3cd14rt814" path="res://debug/debug_slider/debug_inside_slider.gd" id="2_pow1d"]

[node name="BasicSlider" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_wumhd")

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
offset_left = 65.0
offset_top = 6.0
offset_right = 335.0
offset_bottom = 22.0
focus_mode = 0
max_value = 0.0
step = 0.1
script = ExtResource("2_pow1d")

[node name="Value" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 7.0
offset_top = 2.0
offset_right = 51.0
offset_bottom = 25.0
text = "Value"

[node name="Description" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 351.0
offset_top = 3.0
offset_right = 440.0
offset_bottom = 26.0
text = "Description"

[connection signal="init_done" from="HSlider" to="." method="_on_h_slider_init_done"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
